@@ -65,6 +65,7 @@ Bug fixes
  * ``InlinePanel`` now accepts a ``classname`` parameter as per the documentation (emg36, Matt Westcott)
  * Disabled use of escape key to revert content of rich text fields, which could cause accidental data loss (Matt Westcott)
  * Setting ``USE_THOUSAND_SEPARATOR = True`` no longer breaks the rendering of numbers in JS code for InlinePanel (Mattias Loverot, Matt Westcott)
+ * Images / documents pagination now preserves GET parameters (Bojan Mihelac)
 
 
 Upgrade considerations
